# Phanta

./: .env.example  .gitignore  AI_PROVIDERS.md  Anchor.toml  CREATE_GITHUB_REPO.md  CREATE_NEW_REPO.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  GROUPS_README.md  HACKATHON_FEATURES.md  MANUAL_PUSH_INSTRUCTIONS.md  README.md  SETUP_GITHUB.md  commit.sh  docker-compose.yml  package-lock.json  package.json  setup-github.sh
.github/workflows/: ci.yml
backend/: ENV_SETUP.md  database.js  package-lock.json  package.json  seed-balance.js  seed-orders.js  server.js
backend/config/: loadEnv.js
backend/routes/: auth.js  finance.js  groups.js  health.js  orders.js
backend/services/: chatgptClient.js  claudeClient.js  cryptoAnalyticsService.js  financeService.js  geminiClient.js  groqClient.js  heliusService.js  jupiterService.js  mistralClient.js  solanaPortfolioService.js  stockAnalyticsService.js  togetherClient.js  userService.js
contracts/: GridTradingHook.sol  Hybrid_Strategy.sol
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  Dashboard.jsx  WalletContext.jsx  index.css  main.jsx
frontend/src/components/: AIAssistantPanel.jsx  AnimatedNumber.jsx  EmptyState.jsx  ErrorBoundary.jsx  Friends.jsx  GeminiMarketSummary.jsx  GeminiSummaryCard.jsx  GroupChat.jsx  GroupManager.jsx  HelpModal.jsx  Layout.jsx  MarketIntel.jsx  Onboarding.jsx  PhantaLogo.jsx  PortfolioAnalytics.jsx  PortfolioCard.jsx  QuickStats.jsx  (+7 more)
programs/phanta-groups/: Cargo.toml
programs/phanta-groups/src/: lib.rs
(+8 files in other folders)
