[package]
name = "phanta-groups"
version = "0.1.0"
description = "Phanta Groups - On-chain group deposits and majority voting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "phanta_groups"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"

